<resources>
    <string name="app_name">PMApp</string>
    <string name="pm_logo">pm_logo</string>
    <string name="calendar" />
    <string name="notifications" />
    <string name="wallet" />
    <string name="search" />
    <string name="profile_tab" />
    <string name="back_button_img" />
    <string name="profile" />
    <string name="user_profile" />
    <string name="promoted_channels">Promoted Channels</string>
    <string name="etabc">etabc</string>
    <string name="promoted_horizontal">Promoted Horizontal</string>
    <string name="add_icon">Add icon</string>
    <string name="image1">image!</string>
    <string name="image2" />
    <string name="image3" />
    <string name="image4" />
    <string name="image5" />
    <string name="image6" />
    <string name="action_bar" />
    <string name="shops">Shops</string>
    <string name="name1">name!</string>
    <string name="_5_pmc">5 PMC</string>
    <string name="name2">name2</string>
    <string name="name3">name3</string>
    <string name="name4">name4</string>
    <string name="explore">Explore</string>
    <string name="hello_world">Hello world</string>
    <string name="constraint1">constraint!</string>
    <string name="desc1">Desc!</string>
    <string name="desc2">desc2</string>
    <string name="desc3">desc3</string>
    <string name="test1">test!</string>
    <string name="avatar_circle">Avatar_circle</string>
    <string name="promoted_channels1">Promoted Channels</string>
    <string name="eye_icon" />
    <string name="explore1">Explore</string>
    <string name="image_icon" />
    <string name="play" />
    <string name="stream" />
    <string name="friend_requests">Friend Requests</string>
    <string name="suggested_friends">Suggested Friends</string>
    <string name="my_contacts">My Contacts</string>
    <string name="sync_contacts">Sync Contacts</string>
    <string name="pm_users">PM Users</string>
    <string name="search1">Search</string>
    <string name="add">Add</string>
</resources>