<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity"
    android:orientation="vertical">


            <ImageView
                android:id="@+id/imgbench"
                android:layout_width="180dp"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:src="@drawable/img1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/test1"/>

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:lines="2"
                android:text="@string/name1"
                android:textColor="@color/blue"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/etDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/blue"
                android:text="@string/desc1"
                android:lines="2"
                android:textStyle="normal"/>

</LinearLayout>