<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgbench"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:src="@drawable/img1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/test1"/>

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:background="@color/background"
                android:gravity="center"
                android:lines="2"
                android:text="@string/name1"
                android:textColor="@color/blue"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/etDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:background="@color/background"
                android:textColor="@color/blue"
                android:text="@string/desc1"
                android:lines="1"
                android:textStyle="normal"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>