<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/etAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/top_black"
            android:src="@drawable/ic_backspace"
            android:contentDescription="@string/avatar_circle" />

        <ImageButton
            android:id="@+id/etSearch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/top_black"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="8dp" />

        <EditText
            android:id="@+id/ekSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search1"
            android:minHeight="48dp"
            android:background="@null"
            android:textColorHint="@color/light_white"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="5dp" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/etFriendReq"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:text="@string/friend_requests"/>

        <ImageButton
            android:id="@+id/etEyeIcon"
            android:layout_width="30dp"
            android:background="@color/background"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_eye"
            android:contentDescription="@string/eye_icon"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@id/recyclerView1"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/etSuggestFrnd"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:text="@string/suggested_friends"/>

        <ImageButton
            android:id="@+id/ekEyeIcon"
            android:layout_width="30dp"
            android:background="@color/background"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_eye"
            android:contentDescription="@string/eye_icon"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/etContacts"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:textSize="16sp"
            android:layout_marginBottom="55dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/blue"
            android:text="@string/my_contacts"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conlayout"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="54dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/etSynch"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:background="@drawable/background_sync"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sync_contacts"
                android:textAlignment="center"
                android:textColor="@color/background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageButton
            android:id="@+id/etImageIcon"
            android:layout_width="30dp"
            android:background="@color/background"
            android:layout_height="40dp"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="58dp"
            android:src="@drawable/ic_sync"
            android:contentDescription="@string/image_icon"/>


        <ImageButton
            android:id="@+id/etSend"
            android:layout_width="30dp"
            android:background="@color/background"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="58dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/stream"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:textSize="16sp"
            android:text="@string/pm_users"
            android:textColor="@color/blue"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_height="223dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="58dp"-->
<!--        android:background="@color/top_black"-->
<!--        android:layout_marginTop="340dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        >-->

<!--        <ImageButton-->
<!--            android:id="@+id/etHome"-->
<!--            android:layout_width="55dp"-->
<!--            android:layout_height="55dp"-->
<!--            android:layout_marginStart="5dp"-->
<!--            android:layout_marginEnd="5dp"-->
<!--            android:background="@color/top_black"-->
<!--            android:src="@drawable/ic_home" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/etFriends"-->
<!--            android:layout_width="55dp"-->
<!--            android:layout_height="55dp"-->
<!--            android:layout_marginStart="30dp"-->
<!--            android:layout_marginEnd="5dp"-->
<!--            android:background="@color/top_black"-->
<!--            android:src="@drawable/ic_friends_contacts" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/etCreate"-->
<!--            android:layout_width="55dp"-->
<!--            android:layout_height="55dp"-->
<!--            android:layout_marginStart="15dp"-->
<!--            android:layout_marginEnd="5dp"-->
<!--            android:background="@color/top_black"-->
<!--            android:src="@drawable/ic_create" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/etChat"-->
<!--            android:layout_width="55dp"-->
<!--            android:layout_height="55dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginEnd="5dp"-->
<!--            android:background="@color/top_black"-->
<!--            android:src="@drawable/ic_chat" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/etCall"-->
<!--            android:layout_width="55dp"-->
<!--            android:layout_height="55dp"-->
<!--            android:layout_marginStart="15dp"-->
<!--            android:layout_marginEnd="5dp"-->
<!--            android:background="@color/top_black"-->
<!--            android:src="@drawable/ic_call" />-->

<!--    </androidx.appcompat.widget.Toolbar>-->

</androidx.constraintlayout.widget.ConstraintLayout>