<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/card_bg"
        android:clickable="true"
        app:cardElevation="5dp"
        android:focusable="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="@color/card_bg">

            <ImageView
                android:id="@+id/imgbench1"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:importantForAutofill="auto"
                app:srcCompat="@drawable/img1"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:contentDescription="@string/test1"/>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Title"
                    android:text="@string/name1"
                    android:textSize="16sp"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/etDesc"
                    android:text="@string/desc1"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp"
                    android:textColor="#93969D"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conslayout2"
                android:layout_width="70dp"
                android:layout_height="28dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="36dp"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/etAdd"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:background="@drawable/new_add"
                    android:layout_gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>